tests/ui/macros/macro-expansion-tests.stderr
error: cannot find macro `m`
  --> $DIR/macro-expansion-tests.rs:7:21
   |
LL |     fn g() -> i32 { m!() }
   |                     ^ not found in this scope
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: cannot find macro `m`
  --> $DIR/macro-expansion-tests.rs:15:21
   |
LL |     fn g() -> i32 { m!() }
   |                     ^ not found in this scope
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: aborting due to 2 previous errors

